--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Gitprojekt</title>
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
-
+<div class="sky"></div>
 </body>
 </html>
